[package]
name = "wf_twitch_notifier"
version = "0.1.1"
edition = "2024"
rust-version = "1.88.0"
authors = ["Mettwasser"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twitch-irc = { version = "5.0.1", features = ["refreshing-token-native-tls"] }
warframe = "7.0.1"
arbitration_data = { git = "https://github.com/Mettwasser/arbitration_data", version = "0.2.1" }
csv = "1.3.1"
regex = { version = "1.11.1", features = ["use_std"] }

[lints.clippy]
uninlined_format_args = "allow"
